--- a/notebooks/download label files.ipynb
+++ b/notebooks/download label files.ipynb
@@ -9,12 +9,14 @@
    "outputs": [],
    "source": [
     "from urllib.request import urlopen\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "HOME = os.environ['HOME']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -26,28 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "labelfname = '/Users/maye/data/iss/index.lbl'\n",
-    "tabfname = '/Users/maye/data/iss/index.tab'"
+    "labelfname = os.path.join(HOME, 'data/ciss/index.lbl')\n",
+    "tabfname = os.path.join(HOME, 'data/ciss/index.tab')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -59,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -169,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -216,9 +209,9 @@
       "text/plain": [
        "SATURN                      2935\n",
        "SKY                           43\n",
-       "ENCELADUS                      7\n",
        "EPIMETHEUS                     7\n",
        "ATLAS                          7\n",
+       "ENCELADUS                      7\n",
        "JANUS                          6\n",
        "PANDORA                        6\n",
        "PROMETHEUS                     5\n",
@@ -228,7 +221,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,6 +444,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
