--- a/notebooks/2015-02-06_Work_with_ISS_ring_images.ipynb
+++ b/notebooks/2015-02-06_Work_with_ISS_ring_images.ipynb
@@ -46,12 +46,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/klay6683/data/ciss/img_from_miodraks_set\n"
+      "\u001b[34mPDSdata-2015-01-30T13-52-14-08-00\u001b[m\u001b[m/        index.lbl\r\n",
+      "\u001b[34mPDSdata-2015-02-20T14-24-33-08-00\u001b[m\u001b[m/        index.tab\r\n",
+      "\u001b[34mPDSdata_highest_res\u001b[m\u001b[m/                      \u001b[34mpdsdata_sRM_2015-03-12T18-29-13.808978-2\u001b[m\u001b[m/\r\n",
+      "\u001b[34mPDSdata_miodrak_list\u001b[m\u001b[m/                     \u001b[34mpipeline_out\u001b[m\u001b[m/\r\n",
+      "\u001b[34mimg_from_miodraks_set\u001b[m\u001b[m/\r\n"
      ]
     }
    ],
    "source": [
-    "cd img_from_miodraks_set/"
+    "ls"
    ]
   },
   {
@@ -65,15 +69,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mN1560309735_1.IMG\u001b[m\u001b[m*                      img.cub\r\n",
-      "\u001b[31mN1560309735_1.LBL\u001b[m\u001b[m*                      img_cal.cub\r\n",
-      "\u001b[31mN1560309735_1_CALIB.IMG\u001b[m\u001b[m*                img_cal_cylmap.cub\r\n",
-      "\u001b[31mN1560309735_1_CALIB.LBL\u001b[m\u001b[m*                img_cal_cylmap_rot.cub\r\n",
-      "\u001b[31mN1560309735_1_thumb.jpg\u001b[m\u001b[m*                img_cal_map.cub\r\n",
-      "\u001b[31mPREFIX3.FMT\u001b[m\u001b[m*                            img_cal_map_rot.cub\r\n",
-      "\u001b[31mREADME.txt\u001b[m\u001b[m*                             \u001b[31mmanifest_2015-02-06T10-37-09-08-00.txt\u001b[m\u001b[m*\r\n",
-      "\u001b[31mTLMTAB.FMT\u001b[m\u001b[m*                             print.prt\r\n",
-      "\u001b[31mdata_2015-02-06T10-37-09-08-00.txt\u001b[m\u001b[m*\r\n"
+      "/Users/klay6683/data/ciss/pdsdata_sRM_2015-03-12T18-29-13.808978-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd pdsdata_sRM_2015-03-12T18-29-13.808978-2/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N1485648669_1.IMG        N1485648669_1_CALIB.LBL  TLMTAB.FMT\r\n",
+      "N1485648669_1.LBL        N1485648669_1_full.jpg   checksum.txt\r\n",
+      "N1485648669_1_CALIB.IMG  PREFIX2.FMT              manifest.txt\r\n"
      ]
     }
    ],
