--- a/notebooks/Pysis pipeline.ipynb
+++ b/notebooks/Pysis pipeline.ipynb
@@ -2,20 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ":0: FutureWarning: IPython widgets are experimental and may change in the future.\n"
+     ]
+    }
+   ],
    "source": [
-    "from pysis.isis import ciss2isis, cisscal, spiceinit, ringscam2map\n",
+    "from pysis.isis import ciss2isis, cisscal, spiceinit, ringscam2map, getkey, editlab\n",
     "from pysis.util import file_variations\n",
     "from pyciss import plotting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -24,12 +32,12 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "plt.rcParams['figure.figsize'] = (10,10)\n",
-    "plt.rcParams['image.cmap'] = 'gray'"
+    "plt.rcParams['image.cmap'] = 'YlGnBu_r'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -38,17 +46,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/klay6683/data/ciss/PDSdata_miodrak_list\n"
+      "/Users/klay6683/data/ciss/pdsdata_sRM_2015-03-12T18-29-13.808978-2\n"
      ]
     }
    ],
    "source": [
-    "cd ~/data/ciss/PDSdata_miodrak_list/"
+    "cd ~/data/ciss/pdsdata_sRM_2015-03-12T18-29-13.808978-2/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N1485648669_1.IMG          N1485648669_1_CALIB.LBL    img.cub\r\n",
+      "N1485648669_1.LBL          N1485648669_1_full.jpg     img.map.cal.cub\r\n",
+      "N1485648669_1.cal.cub      PREFIX2.FMT                manifest.txt\r\n",
+      "N1485648669_1.cub          TLMTAB.FMT                 print.prt\r\n",
+      "N1485648669_1.map.cal.cub  checksum.txt\r\n",
+      "N1485648669_1_CALIB.IMG    img.cal.cub\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -56,22 +88,27 @@
     {
      "data": {
       "text/plain": [
-       "['N1540679399_1.LBL']"
+       "['N1485648669_1.cal.cub',\n",
+       " 'N1485648669_1.cub',\n",
+       " 'N1485648669_1.map.cal.cub',\n",
+       " 'img.cal.cub',\n",
+       " 'img.cub',\n",
+       " 'img.map.cal.cub']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fnames = !ls *.LBL\n",
+    "fnames = !ls *.cub\n",
     "fnames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -87,6 +124,13 @@
     "    if name_only:\n",
     "        return map_name\n",
     "    ciss2isis(from_=img_name, to=cub_name)\n",
+    "    targetname = getkey.check_output(from_=cub_name,\n",
+    "                                     grp='instrument',\n",
+    "                                     keyword='targetname')\n",
+    "    if targetname.lower() != 'saturn':\n",
+    "      editlab(from_=cub_name, options='modkey',\n",
+    "              keyword='TargetName', value='Saturn',\n",
+    "              grpname='Instrument')\n",
     "    spiceinit(from_=cub_name, cksmithed='yes', spksmithed='yes',\n",
     "              shape='ringplane')\n",
     "    cisscal(from_=cub_name, to=cal_name)\n",
@@ -98,13 +142,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "map_name = calibrate_ciss(fnames[0], name_only=True)"
+    "map_name = calibrate_ciss(fnames[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'N1485648669_1.map.cal.cub'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import gdal\n",
+    "import numpy as np\n",
+    "ds = gdal.Open(map_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "band = ds.GetRasterBand(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data = band.ReadAsArray()\n",
+    "data[data==band.GetNoDataValue()] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "161707952"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43253548"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[~np.isnan(data)].size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "161707952"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape[0]*data.shape[1]"
    ]
   },
   {
