repairing weaknesses found by landscape

--- a/notebooks/download label files.ipynb
+++ b/notebooks/download label files.ipynb
@@ -451,33 +451,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.0.9'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json.__version__"
+    "from pyciss import io"
    ]
   },
   {
@@ -493,18 +471,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from urllib.request import urlopen"
+    "opus = io.OPUS()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Raw:\n",
+       " Label:\n",
+       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1.LBL\n",
+       " Image:\n",
+       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1.IMG\n",
+       " Calibrated:\n",
+       " Label:\n",
+       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.LBL\n",
+       " Image:\n",
+       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.IMG]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opus.get_filename('N1695760475_1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pl = {'primaryfilespec': 'N1695760475_1'}\n",
+    "r = opus.create_request(pl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://pds-rings-tools.seti.org/opus/api/files.json?primaryfilespec=N1695760475_1'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -515,120 +559,13 @@
        "'{\"data\": {\"S_IMG_CO_ISS_1695760475_N\": {\"RAW_IMAGE\": [\"http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1.LBL\", \"http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1.IMG\", \"http://pds-rings.seti.org/volumes/COISS_2xxx//COISS_2069/data/1695427520_1695761375/N1695760475_1.IMG\", \"http://pds-rings.seti.org/volumes/COISS_2069/LABEL/TLMTAB.FMT\", \"http://pds-rings.seti.org/volumes/COISS_2069/LABEL/PREFIX3.FMT\"], \"CALIBRATED\": [\"http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/LABEL/TLMTAB.FMT\", \"http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/LABEL/PREFIX3.FMT\", \"http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.LBL\", \"http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.IMG\", \"http://pds-rings.seti.org/derived/COISS_2xxx//COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.IMG\"]}}}'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "urlopen(url).read().decode()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "from urllib.request import urlopen, unquote\n",
-    "from urllib.parse import urlparse, urlencode\n",
-    "import requests\n",
-    "\n",
-    "class OPUSImage(object):\n",
-    "    def __init__(self, jsonlist):\n",
-    "        self.jsonlist = jsonlist\n",
-    "        for item in jsonlist:\n",
-    "            parsed = urlparse(item)\n",
-    "            if '//' in parsed.path:\n",
-    "                continue\n",
-    "            if item.upper().endswith(\".LBL\"):\n",
-    "                self.label_url = item\n",
-    "            elif item.upper().endswith('.IMG'):\n",
-    "                self.image_url = item\n",
-    "    def __repr__(self):\n",
-    "        s = \"Label:\\n{}\\nImage:\\n{}\".format(self.label_url,\n",
-    "                                      self.image_url)\n",
-    "        return s\n",
-    "  \n",
-    "\n",
-    "class OPUSObsID(object):\n",
-    "\n",
-    "    def __init__(self, obsid_data):\n",
-    "        self.idname = obsid_data[0]\n",
-    "        self.raw = OPUSImage(obsid_data[1]['RAW_IMAGE'])\n",
-    "        self.calib = OPUSImage(obsid_data[1]['CALIBRATED'])\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        s = \"Raw:\\n{}\\nCalibrated:\\n{}\".format(self.raw, self.calib)\n",
-    "        return s\n",
-    "\n",
-    "  \n",
-    "class OPUS(object):\n",
-    "    base_url = 'http://pds-rings-tools.seti.org/opus/api'\n",
-    "    files_url = base_url + '/files.json'\n",
-    "    payload = {'target':'S+RINGS',\n",
-    "               'instrumentid':'Cassini+ISS',\n",
-    "               'projectedradialresolution1':'',\n",
-    "               'projectedradialresolution2':'0.5'}\n",
-    "#     def __init__(self):\n",
-    "    def send_request(self):\n",
-    "        r = requests.get(self.files_url,\n",
-    "                         params=unquote(urlencode(self.payload)))\n",
-    "        response = r.json()['data']\n",
-    "        obsids = []\n",
-    "        for obsid_data in response.items():\n",
-    "            obsids.append(OPUSObsID(obsid_data))\n",
-    "        self.obsids = obsids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "opus = OPUS()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "opus.send_request()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Label:\n",
-       "http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2047/data/1595780006_1595992894/N1595944414_1.LBL\n",
-       "Image:\n",
-       "http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2047/data/1595780006_1595992894/N1595944414_1.IMG"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "opus.obsids[0].raw"
+    "r.text"
    ]
   },
   {
