putting OPUS stuff into opusapi module. OPUS interface working quite well now!

--- a/notebooks/download label files.ipynb
+++ b/notebooks/download label files.ipynb
@@ -455,37 +455,81 @@
    },
    "outputs": [],
    "source": [
-    "from pyciss import io"
+    "from pyciss import io, opusapi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "url = 'http://pds-rings-tools.seti.org/opus/api/files.json?&primaryfilespec=N1695760475_1'"
+    "opus = opusapi.OPUS()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "opus = io.OPUS()"
+    "opus.get_between_resolutions(res1=0.5, res2=0.6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2068/data/1683728008_1683934351/W1683902515_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2062/data/1654219588_1654265459/N1654250545_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328621_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563633955_1563701709/W1563636833_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563854581_1563879674/W1563858060_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336880_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2017/data/1512175979_1512194653/N1512191062_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336397_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328477_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595337041_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563854581_1563879674/W1563857545_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328549_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2017/data/1512175979_1512194653/W1512191728_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328405_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595337202_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563854581_1563879674/W1563857873_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336558_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2017/data/1512175979_1512194653/W1512190938_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563633955_1563701709/N1563636983_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336719_1_small.jpg' />"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opus.show_images('small')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595780006_1595992894/N1595944484_1_thumb.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(opus.obsids[0].thumb_img_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [
     {
@@ -493,35 +537,23 @@
       "text/plain": [
        "[Raw:\n",
        " Label:\n",
-       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1.LBL\n",
+       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2031/data/1554726575_1554802203/N1554730872_1.LBL\n",
        " Image:\n",
-       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1.IMG\n",
+       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2031/data/1554726575_1554802203/N1554730872_1.IMG\n",
        " Calibrated:\n",
        " Label:\n",
-       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.LBL\n",
+       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2031/data/1554726575_1554802203/N1554730872_1_CALIB.LBL\n",
        " Image:\n",
-       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.IMG]"
+       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2031/data/1554726575_1554802203/N1554730872_1_CALIB.IMG]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "opus.get_filename('N1695760475_1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pl = {'primaryfilespec': 'N1695760475_1'}\n",
-    "r = opus.create_request(pl)"
+    "opus.get_filename('N1554730872')"
    ]
   },
   {
@@ -533,8 +565,11 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<img style='width: 1024px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2031/data/1554726575_1554802203/N1554730872_1_full.jpg' />"
+      ],
       "text/plain": [
-       "'http://pds-rings-tools.seti.org/opus/api/files.json?primaryfilespec=N1695760475_1'"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "execution_count": 16,
@@ -543,101 +578,7 @@
     }
    ],
    "source": [
-    "r.url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"data\": {\"S_IMG_CO_ISS_1695760475_N\": {\"RAW_IMAGE\": [\"http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1.LBL\", \"http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1.IMG\", \"http://pds-rings.seti.org/volumes/COISS_2xxx//COISS_2069/data/1695427520_1695761375/N1695760475_1.IMG\", \"http://pds-rings.seti.org/volumes/COISS_2069/LABEL/TLMTAB.FMT\", \"http://pds-rings.seti.org/volumes/COISS_2069/LABEL/PREFIX3.FMT\"], \"CALIBRATED\": [\"http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/LABEL/TLMTAB.FMT\", \"http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2069/LABEL/PREFIX3.FMT\", \"http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.LBL\", \"http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.IMG\", \"http://pds-rings.seti.org/derived/COISS_2xxx//COISS_2069/data/1695427520_1695761375/N1695760475_1_CALIB.IMG\"]}}}'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r.text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://pds-rings-tools.seti.org/opus/api/files.json?&primaryfilespec=N1695760475_1'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<body>\n",
-       "\n",
-       "\n",
-       "\t<li><img  id = \"thumb__\"\n",
-       "\n",
-       "        \n",
-       "\n",
-       "            src = \"http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2069/data/1695427520_1695761375/N1695760475_1_thumb.jpg\">\n",
-       "\n",
-       "        \n",
-       "    </li>\n",
-       "\n",
-       "\n",
-       "\n",
-       "</body>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "HTML(url)"
+    "opus.show_images('full')"
    ]
   },
   {
