adding a lot of methods to RingCube class and upgrading setup file. Bumping version to 0.2

--- a/notebooks/download label files.ipynb
+++ b/notebooks/download label files.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -491,43 +491,24 @@
     {
      "data": {
       "text/html": [
-       "<img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2068/data/1683728008_1683934351/W1683902515_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2062/data/1654219588_1654265459/N1654250545_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328621_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563633955_1563701709/W1563636833_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563854581_1563879674/W1563858060_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336880_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2017/data/1512175979_1512194653/N1512191062_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336397_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328477_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595337041_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563854581_1563879674/W1563857545_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328549_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2017/data/1512175979_1512194653/W1512191728_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328405_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595337202_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563854581_1563879674/W1563857873_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336558_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2017/data/1512175979_1512194653/W1512190938_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563633955_1563701709/N1563636983_1_small.jpg' /><img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336719_1_small.jpg' />"
+       "<img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2068/data/1683728008_1683934351/W1683902515_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2062/data/1654219588_1654265459/N1654250545_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328621_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563633955_1563701709/W1563636833_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563854581_1563879674/W1563858060_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336880_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2017/data/1512175979_1512194653/N1512191062_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336397_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328477_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595337041_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563854581_1563879674/W1563857545_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328549_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2017/data/1512175979_1512194653/W1512191728_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595328405_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595337202_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563854581_1563879674/W1563857873_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336558_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2017/data/1512175979_1512194653/W1512190938_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2034/data/1563633955_1563701709/N1563636983_1_med.jpg' /><img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595302104_1595345092/N1595336719_1_med.jpg' />"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "opus.show_images('small')"
+    "opus.show_images('med')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2047/data/1595780006_1595992894/N1595944484_1_thumb.jpg\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(opus.obsids[0].thumb_img_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -547,7 +528,7 @@
        " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2031/data/1554726575_1554802203/N1554730872_1_CALIB.IMG]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -566,19 +547,58 @@
     {
      "data": {
       "text/html": [
-       "<img style='width: 1024px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2031/data/1554726575_1554802203/N1554730872_1_full.jpg' />"
+       "<img style='width: 512px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2031/data/1554726575_1554802203/N1554730872_1_med.jpg' />"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "opus.show_images('full')"
+    "opus.show_images('med')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading N1554730872_1_med.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "opus.download_previews()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading N1554730872_1.IMG\n",
+      "Downloading N1554730872_1.LBL\n"
+     ]
+    }
+   ],
+   "source": [
+    "opus.download_results()"
    ]
   },
   {
