--- a/notebooks/2015-04-03 Downloading ring images.ipynb
+++ b/notebooks/2015-04-03 Downloading ring images.ipynb
@@ -4,25 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/klay6683/Dropbox/DDocuments/UVIS/straws\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd ~/Dropbox/DDocuments/UVIS/straws/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
     "collapsed": false,
     "scrolled": true
    },
@@ -1286,86 +1267,14 @@
        "[490 rows x 15 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_table(\"coiss_ahires.015.list.txt\", sep=' ', skipinitialspace=True, header=None)\n",
+    "df = pd.read_table(\"/home/klay6683/coiss_ahires.015.list.txt\", sep=' ', skipinitialspace=True, header=None)\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 490 entries, 0 to 489\n",
-      "Data columns (total 13 columns):\n",
-      "0     490 non-null object\n",
-      "1     490 non-null float64\n",
-      "2     490 non-null float64\n",
-      "3     490 non-null int64\n",
-      "4     490 non-null int64\n",
-      "5     490 non-null float64\n",
-      "6     490 non-null float64\n",
-      "7     490 non-null object\n",
-      "8     490 non-null int64\n",
-      "9     490 non-null int64\n",
-      "10    490 non-null int64\n",
-      "11    490 non-null float64\n",
-      "12    490 non-null object\n",
-      "dtypes: float64(5), int64(5), object(3)\n",
-      "memory usage: 53.6+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# List of images done in Miodrag's email"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "l = ['N1467346388_2',\n",
-    "'N1467346447_2',\n",
-    "'N1503244044',\n",
-    "'N1560309735',\n",
-    "'N1560310339',\n",
-    "'N1591682340',\n",
-    "'N1601009710',\n",
-    "'N1628683587']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "opus = opusapi.OPUS()"
    ]
   },
   {
@@ -1379,92 +1288,102 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 100 obsids.\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 490 entries, 0 to 489\n",
+      "Data columns (total 15 columns):\n",
+      "0     490 non-null object\n",
+      "1     490 non-null float64\n",
+      "2     490 non-null float64\n",
+      "3     490 non-null int64\n",
+      "4     490 non-null int64\n",
+      "5     490 non-null float64\n",
+      "6     490 non-null float64\n",
+      "7     490 non-null object\n",
+      "8     490 non-null int64\n",
+      "9     490 non-null int64\n",
+      "10    490 non-null int64\n",
+      "11    490 non-null float64\n",
+      "12    490 non-null object\n",
+      "13    490 non-null object\n",
+      "14    490 non-null object\n",
+      "dtypes: float64(5), int64(5), object(5)\n",
+      "memory usage: 61.2+ KB\n"
      ]
     }
    ],
    "source": [
-    "opus.get_between_resolutions(res1=0, res2=1.7)"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(opus.obsids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "opus.unpack_json_response??"
+    "opus = opusapi.OPUS()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def download_ciss(file_id):\n",
+    "    import os\n",
+    "    from pyciss import opusapi\n",
+    "    opus = opusapi.OPUS()\n",
+    "    targetfolder = os.path.join(opusapi.savepath, file_id)\n",
+    "    try:\n",
+    "        os.mkdir(targetfolder)\n",
+    "    except FileExistsError:\n",
+    "        pass\n",
+    "    opus.get_filename(file_id)\n",
+    "    opus.download_results(targetfolder)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.parallel import Client\n",
+    "c = Client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "len(opus)"
+    "lbview = c.load_balanced_view()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Raw:\n",
-       " Label:\n",
-       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2004/data/1466584989_1467427246/N1467345444_2.LBL\n",
-       " Image:\n",
-       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2004/data/1466584989_1467427246/N1467345444_2.IMG\n",
-       " Calibrated:\n",
-       " Label:\n",
-       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2004/data/1466584989_1467427246/N1467345444_2_CALIB.LBL\n",
-       " Image:\n",
-       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2004/data/1466584989_1467427246/N1467345444_2_CALIB.IMG]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "opus.get_filename('N1467345444')"
+    "results = lbview.map_async(download_ciss, df[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1473,37 +1392,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Downloading', 'N1467345444_2_med.jpg')\n"
+      "Done.\n"
      ]
     }
    ],
    "source": [
-    "opus.download_previews()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img style='width: 256px; margin: 0px; float: left; border: 1px solid black;' src='http://pds-rings.seti.org/browse/COISS_2xxx/COISS_2004/data/1466584989_1467427246/N1467345444_2_small.jpg' />"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "opus.show_images()"
+    "from time import sleep\n",
+    "while not results.ready():\n",
+    "    sleep(5)\n",
+    "print(\"Done.\")"
    ]
   },
   {
